# cxx-for-java-developers

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yml  LICENSE  NOTICE  README.md  README.zh-Hans.md  REUSE.toml  mkdocs.yml  pyproject.toml
docs/: ffi.en.md  ffi.md  ffi.zh.md  idioms-and-patterns.en.md  idioms-and-patterns.md  idioms-and-patterns.zh.md  index.en.md  index.md  quickstart.en.md  quickstart.md  quickstart.zh.md  references.en.md  references.md  references.zh.md  robots.txt
docs/.snippets/exceptions/: 001-status-example.cc
docs/.snippets/idioms-and-patterns/: 001-background-thread-service.cc  002a-singleton-nodestructor.cc  002b-singleton-simple.cc  003-copy-on-write-queue.cc
docs/.snippets/quickstart/: 001-structure.txt  002a-example_lib.h  (+4 more)
docs/core-language/: exceptions.en.md  exceptions.md  exceptions.zh.md  standard-library.en.md  standard-library.md  standard-library.zh.md  syntax-and-semantics.en.md  syntax-and-semantics.md  syntax-and-semantics.zh.md  third-party-libraries.en.md  third-party-libraries.md  types.en.md  types.md  types.zh.md
docs/engineering/: build-systems.en.md  build-systems.zh.md  debugging.en.md  debugging.zh.md  dynamic-analysis.en.md  dynamic-analysis.md  profiling.en.md  profiling.zh.md  static-analysis.en.md  static-analysis.md
docs/stylesheets/: extra.css
docs/toolchain/: build-systems.md  debugging.md  dynamic-analysis.md  profiling.md  static-analysis.md
overrides/: main.html
overrides/partials/: comments.html
scripts/: Invoke-IndexNow.ps1  Invoke-Lint.ps1  Update-LicenseHeader.ps1
(+81 files in other folders)
