# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 Shuai Zhang

[project]
description = "面向 Java 开发者的 C++ 入门教程"
name = "cxx-for-java-developers-docs"
version = "1.0.0.dev1"

authors = [
  {name = "Shuai Zhang", email = "zhangshuai.ustc@gmail.com"},
]

license = {file = "LICENSE"}
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
  "jieba>=0.42.1",
  "mkdocs>=1.6.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.19",
  "pygments>=2.19.2",
  "pymdown-extensions>=10.16.1",
]
