# SPDX-FileCopyrightText: 2021 Shuai Zhang
#
# SPDX-License-Identifier: Apache-2.0

[project]
description = "面向 Java 开发者的 C++ 入门教程"
name = "cxx-for-java-developers-docs"
version = "1.0.0.dev1"

authors = [
  {name = "Shuai Zhang", email = "zhangshuai.ustc@gmail.com"},
]

license-files = [
  "LICENSE",
  "NOTICE",
  "LICENSES/Apache-2.0.txt",
  "LICENSES/CC-BY-NC-ND-4.0.txt",
]
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
  "jieba>=0.42.1",
  "mkdocs>=1.6.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.19",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-ultralytics-plugin>=0.1.30",
  "pyyaml-env-tag>=1.1",
  "pygments>=2.19.2",
  "pymdown-extensions>=10.16.1",
  "mkdocs-static-i18n[material]>=1.3.0",
]
